apps/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: { { .Values.namespace } }
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: { { .Values.keycloak.servicePort } }
      targetPort: 8080
