apps/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt # <- globalny certResolver
spec:
  tls:
    - hosts: keycloak.gghub.ovh
  rules:
    - host: keycloak.gghub.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: keycloak, port: { number: 8080 } }
